# distill

./: FINAL_SYSTEM_SUMMARY.md  PDF_ANALYSIS_SUMMARY.md  README.md  cdc_sdm_eval_guide.md  integrated_qa_system.py  interactive_pdf_qa.py  llm_integration.py  main.py  openrouter_integration.py  pyproject.toml  run_api.py  run_interactive.py  sample_document.txt
.cursor/rules/: project.mdc  rule.mdc
context_compressor/: __init__.py  api.py  api_server.py  cli.py  compressor.py  embeddings.py  enhanced_multimodal_compressor.py  fusion.py  image_captioner.py  image_encoder.py  logging_config.py  mmr.py  multimodal_compressor.py  multimodal_extractor.py  multimodal_schemas.py  performance_optimizer.py  reranker.py  router.py  schemas.py  table_extractor.py  trimming.py  utils.py  vector_store.py
context_compressor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
context_compressor/fine_tuning/: __init__.py  anchor_extractor.py  data_generator.py  fine_tuner.py  oracle_creator.py
src/api/: __init__.py  integrated_qa_system.py
src/examples/: __init__.py  interactive_pdf_qa.py
src/llm_integrations/: __init__.py  llm_integration.py  openrouter_integration.py
src/main/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_benchmarks.py  test_compressor.py  test_fusion.py  test_schemas.py  test_utils.py
